--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "near-api-js": "^0.44.2",
     "rxjs": "~7.4.0",
     "tailwindcss": "^3.0.15",
     "tslib": "^2.3.0",
