--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "near-api-js": "^0.44.2",
+    "process": "^0.11.10",
     "rxjs": "~7.4.0",
     "tailwindcss": "^3.0.15",
     "tslib": "^2.3.0",
@@ -28,6 +29,7 @@
     "@angular-devkit/build-angular": "~13.1.3",
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/bn.js": "^5.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
